kubernetes/platform/config/unifi/unifi-network.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: unifi-network
spec:
  ports:
    - name: https
      port: 443
      targetPort: 443
      protocol: TCP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: unifi-network
subsets:
  - addresses:
      - ip: 192.168.1.1
    ports:
      - name: https
        port: 443
        protocol: TCP
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/networking.istio.io/destinationrule_v1.json
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: unifi-network
spec:
  host: unifi-network.unifi.svc.cluster.local
  trafficPolicy:
    tls:
      mode: SIMPLE
      insecureSkipVerify: true
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: unifi-network
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "UniFi Network"
    gethomepage.dev/group: "Infrastructure"
    gethomepage.dev/icon: "unifi.svg"
spec:
  parentRefs:
    - name: internal
      namespace: istio-gateway
  hostnames:
    - "network.${internal_domain}"
  rules:
    - backendRefs:
        - name: unifi-network
          port: 443
